<resources>
    <string name="app_name">Smart Bali Backpaker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="plan_the_best">Plan The Best</string>
    <string name="the_best_choice_is_depend_on_yours">The best choice is depend on yours</string>
    <string name="skip">SKIP</string>
    <string name="onboarding_page_one_content">onboarding page one</string>
    <string name="build_a_relationship">Build a Relationship</string>
    <string name="onboarding_page_two_content">onboarding page two</string>
    <string name="got_the_finest_moment_while_travelling">Got the finest moment while travelling</string>
    <string name="onboarding_last_page_content">onboarding last page</string>
    <string name="enjoy_traveling">Enjoy Traveling</string>
    <string name="a_lot_of_memories_that_never_forgotten">A lot of memories that never forgotten</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="image_temple_content">image temple</string>
    <string name="smart_bali_backpacker">Smart Bali-Backpacker</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_now"><u>Login Now</u></string>
    <string name="tab_allplace">All</string>
    <string name="tab_touristplace">Tourist Place</string>
    <string name="tab_hotelvilla">Hotel &amp; Villa</string>
    <string name="tab_worshipplace">Worship Place</string>
    <string name="tab_personalchat">Personal</string>
    <string name="tab_grupchat">Group</string>
    <string name="key_edit_profile">key_edit_profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="key_notifications">key_notifications</string>
    <string name="notifications">Notifications</string>
    <string name="key_edit_languages">key_edit_languages</string>
    <string name="languages">Languages</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="image_profile_content">Image Profile</string>
    <string name="update_my_profile">Update My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="search_here">Search here</string>
    <string name="key_log_out">key_log_out</string>
    <string name="logout">Log Out</string>
    <string name="enter_email">Enter Email</string>
    <string name="new_password">New Password</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="choose">Choose</string>
    <string name="save_and_sign_up">Save and Sign Up</string>
    <string name="key_dark_mode">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="add_member">Add Member</string>
    <string name="group_info">Group Info</string>
    <string name="add_participant">Add Participant</string>
    <string name="leave_group">Leave Group</string>
    <string name="until_date">Until Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="until">until</string>
    <string name="select_dates">Select Dates</string>
    <string name="tempat_kedatangan">Arrival Place</string>
    <string name="guide">Guide</string>
    <string name="daftarkan_saya">Register Me</string>
    <string name="tab_publicgroupchat">Public</string>
    <string name="facebook_app_id">419180736313160</string>
    <string name="fb_login_protocol_scheme">fb419180736313160</string>
    <string name="travel">Travel</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="tempat_favorit">Favorite Places</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="favorit_kosong">Empty Favorite</string>
    <string name="attention">Attention</string>
    <string name="arrived">Have you arrived at the destination?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trafficjam">Oops! Traffic jam detected!</string>
    <string name="trafficjamdesc">Roads to tourist attractions are observed to be jammed. Do you want to go to another tourist destination?</string>
</resources>