<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings_preferences"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="@string/key_edit_profile"
        android:title="@string/edit_profile"
        android:icon="@drawable/profile"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        />

    <SwitchPreference
        android:key="@string/key_notifications"
        android:title="@string/notifications"
        android:singleLine="true"
        android:icon="@drawable/notifications"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        />

    <ListPreference
        app:defaultValue="@string/pref_dark_auto"
        app:entries="@array/dark_mode"
        app:entryValues="@array/dark_mode_value"
        app:key="@string/key_dark_mode"
        android:icon="@drawable/darkmode"
        app:title="Theme Display"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="@string/key_edit_languages"
        android:title="@string/languages"
        android:icon="@drawable/languages"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"/>

</PreferenceScreen>