<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_popular"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>

    <item
        android:id="@+id/navigation_guide"
        android:enabled="true"
        android:icon="@drawable/guide"
        android:title="@string/guide"/>

    <item
        android:id="@+id/navigation_group_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"/>
    <item
        android:id="@+id/navigation_setting"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings"/>
</menu>